# structural-bioinfo-containers

./: .gitignore  CLAUDE.md  LICENSE  README.md  versions.json
.github/workflows/: build.yml
containers/boltz/: Dockerfile  README.md  pixi.toml
containers/boltzgen/: Dockerfile  README.md  pixi.toml
containers/colabfold/: Dockerfile  README.md  pyproject.toml
containers/proteinmpnn/: Dockerfile  README.md  pixi.toml
example/boltz/input/: input.fasta
example/boltzgen/input/: cyclicdesign.yaml
