[project]
name = "localcolabfold"
version = "1.6.1"
description = "ColabFold on your local PC"
requires-python = "==3.12.12"

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]

[tool.pixi.system-requirements]
cuda = "12"

[tool.pixi.target.linux-64.dependencies]
openmm = "==8.2.0"
pdbfixer = "==1.10"
kalign2 = "==2.04"
hhsuite = "==3.3.0"
mmseqs2 = "*"
numpy = "<=2.1.3"

[tool.pixi.target.linux-aarch64.dependencies]
openmm = "==8.2.0"
pdbfixer = "==1.10"
kalign2 = "==2.04"
hhsuite = "==3.3.0"
mmseqs2 = "*"
numpy = "<=2.1.3"

[tool.pixi.target.osx-arm64.dependencies]
openmm = "==8.2.0"
pdbfixer = "==1.10"
kalign2 = "==2.04"
hhsuite = "==3.3.0"
mmseqs2 = "*"
numpy = "<=2.1.3"

[tool.pixi.target.linux-64.pypi-dependencies]
colabfold = { git = "https://github.com/sokrypton/ColabFold", extras = ["alphafold-minus-jax"] }
jax = { version = "==0.5.3", extras = ["cuda12"] }
tensorflow = "==2.19.1"
tqdm = "==4.66.1"
silence_tensorflow = "==1.2.3"

[tool.pixi.target.linux-aarch64.pypi-dependencies]
colabfold = { git = "https://github.com/sokrypton/ColabFold", extras = ["alphafold-minus-jax"] }
jax = { version = "==0.6.2", extras = ["cuda12"] }
tensorflow = "==2.19.1"
tqdm = "==4.66.1"
silence_tensorflow = "==1.2.3"

[tool.pixi.target.osx-arm64.pypi-dependencies]
colabfold = { git = "https://github.com/sokrypton/ColabFold", extras = ["alphafold-minus-jax"] }
jax = "==0.5.0"
jaxlib = "==0.5.0"
tensorflow = "==2.20.0"
silence_tensorflow = "==1.2.3"
